editor-components/download/download3/download3.module.scss
@use "../../../../composer-tools/composer-base-components//base//utitilities/viewports.module.scss" as *;

@mixin button-image($w, $h) {
  width: $w !important;
  height: $h !important;
  object-fit: cover;
  cursor: pointer;
  border-radius: var(--composer-border-radius-sm);
}

.container {
  display: flex;
  flex-direction: column;
  gap: var(--composer-gap-lg);

  .image-container {
    width: 100%;
    height: 600px;
    position: relative;
    margin-left: -50px;
    margin-right: -50px;
    width: calc(100% + 100px);

    .image {
      width: 100%;
      height: 100%;
      object-fit: cover;
    }

    .overlay {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      background-color: var(--composer-overlay-color);
      z-index: 1;
    }
  }

  .max-content {
    .page {
      .group-container-left {
        display: flex;
        width: 100%;
        align-items: stretch;
        justify-content: space-between;
        gap: var(--composer-gap-lg);

        .title-block {
          display: flex;
          flex-direction: column;
          width: 20%;
          align-items: flex-start;
          justify-content: center;

          .subtitle {
            margin-left: 0;
            text-align: left;
            width: fit-content;
          }

          .title {
            margin: 0;
          }
        }

        .description {
          width: 60%;
          align-self: center;
        }

        .button-group {
          display: flex;
          flex-direction: column;
          align-self: center;
          flex-wrap: wrap;
          gap: var(--composer-gap-sm);
          width: 20%;

          .button-image {
            @include button-image(144px, 42px);
          }

          .button-element {
            .button-text {
              content: "";
            }

            .button-icon {
              line-height: 0;
            }
          }
        }
      }
    }

    .group-container-center {
      .vertical-content-center {
        align-items: center;

        .subtitle {
          text-align: center;
          width: fit-content;
        }

        .title,
        .description {
          content: "";
        }

        .button-group {
          display: flex;
          gap: var(--composer-gap-sm);
          flex-wrap: wrap;
          justify-content: center;

          .button {
            .button-image {
              @include button-image(144px, 42px);
            }

            .button-element {
              .button-text {
                content: "";
              }

              .button-icon {
                line-height: 0;
              }

            }
          }
        }
      }
    }
  }
}


@container (max-width: #{$composer-tablet-width}) {
  .container {
    .image-container {
      height: 300px;
      margin-left: -40px;
      margin-right: -40px;
      width: calc(100% + 80px);
    }

    .max-content {
      .page {
        .group-container-left {
          .title-block {
            width: 35%;
          }

          .description {
            width: 45%;
          }

          .button-group {
            .button-image {
              @include button-image(141px, 43px);
            }
          }
        }

        .group-container-center {
          .vertical-content-center {
            .button-group {
              .button {
                .button-image {
                  @include button-image(141px, 43px);
                }
              }
            }
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    .image-container {
      height: 250px;
      margin-left: -20px;
      margin-right: -20px;
      width: calc(100% + var(--composer-gap-lg));
    }

    .max-content {
      .page {
        .group-container-left {
          flex-direction: column;
          gap: var(--composer-gap-md);

          .title-block {
            width: 100%;

            .subtitle,
            .title {
              content: "";
            }
          }

          .description {
            width: 100%;
          }

          .button-group {
            width: 100%;
            flex-direction: row;

            .button-image {
              @include button-image(109px, 29px);
            }
          }
        }

        .group-container-center {
          .vertical-content-center {
            .button-group {
              .button {
                .button-image {
                  @include button-image(109px, 29px);
                }
              }
            }
          }
        }
      }
    }
  }
}

