fix: When 'Download 3' alignment is set to left, the buttons should be aligned to the right

--- a/editor-components/download/download3/download3.module.scss
+++ b/editor-components/download/download3/download3.module.scss
@@ -75,6 +75,7 @@
           flex-direction: column;
           align-self: center;
           flex-wrap: wrap;
+          align-content: flex-end;
           gap: var(--composer-gap-sm);
           width: 20%;
 
